--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -4,9 +4,9 @@
     android:shape="oval">
 
     <solid
-        android:color="#000000"/>
+        android:color="@android:color/black"/>
 
     <size
-        android:width="120dp"
-        android:height="120dp"/>
+        android:width="20dp"
+        android:height="20dp"/>
 </shape>
