added new api, updated ui, etc.

--- a/app/src/main/res/layout/adapter_live_arrivals.xml
+++ b/app/src/main/res/layout/adapter_live_arrivals.xml
@@ -36,12 +36,13 @@
 
         <TextView
             android:id="@+id/live_arrival_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="MESTNI LOG;  osnovna"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintEnd_toStartOf="@+id/live_arrival_minutes"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView" />
 
