--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,10 @@
     android:layout_height="match_parent">
 
 
+    <SearchView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -11,13 +15,5 @@
         android:layout_width="match_parent" />
 
     <include layout="@layout/bottom_sheet" />
-
-    <ImageButton
-        android:id="@+id/maps_test_back_btn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:src="@drawable/ic_arrow_back_black_24dp"
-        android:tint="@android:color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
