--- a/app/src/main/res/layout/template_route_station.xml
+++ b/app/src/main/res/layout/template_route_station.xml
@@ -22,10 +22,10 @@
         android:id="@+id/route_station_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
         android:text="19"
         android:textColor="@android:color/white"
         android:textSize="12sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/route_station_circle"
         app:layout_constraintEnd_toEndOf="@+id/route_station_circle"
         app:layout_constraintStart_toStartOf="@+id/route_station_circle"
