--- a/app/src/main/res/drawable/layout_bg.xml
+++ b/app/src/main/res/drawable/layout_bg.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/>
-    <stroke android:width="3dp" android:color="@color/colorPrimary" />
-    <corners android:radius="15dp"/>
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item>
+        <shape>
+            <solid android:color="#FFFFFF"/>
+            <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
+        </shape>
+    </item>
+    <item android:gravity="bottom">
+        <shape android:shape="line">
+            <stroke android:width="1dp" android:color="@android:color/darker_gray" />
+        </shape>
+    </item>
+
+
+</layer-list>
