--- a/app/src/main/res/layout/template_route_number.xml
+++ b/app/src/main/res/layout/template_route_number.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/route_station_circle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="4dp"
+    android:layout_marginStart="2dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginEnd="3dp"
+    android:layout_marginBottom="3dp"
+    android:background="@drawable/stretched_circle"
+    android:elevation="2dp"
     android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/route_station_circle"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:contentDescription="@string/todo"
-        android:tint="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/circle" />
 
     <TextView
         android:id="@+id/route_station_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto"
+        android:minEms="2"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         android:text="19"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/route_station_circle"
