--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,6 +3,9 @@
 
     <item
         android:id="@+id/stations_nearby"
-        android:icon="@drawable/location_pin"
+        android:icon="@drawable/ic_location_on_black_24dp"
         android:title="postaje" />
+    <item
+        android:icon="@drawable/ic_directions_bus_black_24dp"
+        android:title="linije" />
 </menu>
