--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,12 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorRipple">#1AD81B60</color>
+    <color name="gray">#66000000</color>
+    <color name="light_gray">#11000000</color>
+
+    <color name="event_live">#008577</color>
+    <color name="event_arrival">#D81B60</color>
+    <color name="event_detour">#ffff8800</color>
 
 </resources>
