--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/actor</item>
+        <item>@font/advent_pro_light</item>
+        <item>@font/advent_pro_medium</item>
+        <item>@font/open_sans</item>
+        <item>@font/open_sans_light</item>
         <item>@font/roboto</item>
         <item>@font/roboto_bold</item>
         <item>@font/roboto_thin</item>
