--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -46,7 +46,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <SearchView
+            <ImageButton
                 android:id="@+id/station_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,9 +54,8 @@
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/stretched_circle"
                 android:elevation="2dp"
-                android:queryBackground="@drawable/stretched_circle"
-                android:queryHint='"Bavarski dvor"'
-                android:searchIcon="@drawable/ic_search_black_24dp"
+                android:padding="12dp"
+                android:src="@drawable/ic_search_black_24dp"
                 app:layout_constraintBottom_toBottomOf="@+id/station_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -86,19 +85,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation_menu" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/sort_by_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:clickable="true"
-        android:tint="@android:color/white"
-        app:backgroundTint="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="@+id/test_rv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_location_on_black_24dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
