--- a/app/src/main/res/anim/popout_medium.xml
+++ b/app/src/main/res/anim/popout_medium.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:fillAfter="true"
-    android:startOffset="600">
+    android:startOffset="600"
+    android:interpolator="@android:anim/decelerate_interpolator">
 
     <scale
         xmlns:android="http://schemas.android.com/apk/res/android"
