--- a/app/src/main/res/layout/activity_station.xml
+++ b/app/src/main/res/layout/activity_station.xml
@@ -46,10 +46,11 @@
                 android:id="@+id/station_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:fontFamily="@font/roboto_bold"
                 android:text="Navje"
                 android:textColor="@android:color/black"
-                android:textSize="32sp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/station_center"
@@ -70,6 +71,7 @@
                 android:paddingEnd="8dp"
                 android:text="@string/into_center"
                 android:textColor="@android:color/white"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/station_opposite_btn"
                 app:layout_constraintEnd_toStartOf="@+id/station_favourite"
                 app:layout_constraintTop_toTopOf="@+id/station_opposite_btn"
