--- a/app/src/main/res/layout/template_arrival_time.xml
+++ b/app/src/main/res/layout/template_arrival_time.xml
@@ -19,8 +19,10 @@
         android:id="@+id/arrival_time_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
         android:text="11:15"
         android:textColor="@android:color/black"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
