--- a/app/src/main/res/layout/template_station_nearby.xml
+++ b/app/src/main/res/layout/template_station_nearby.xml
@@ -11,57 +11,47 @@
     android:orientation="vertical"
     app:cardElevation="2dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingBottom="4dp">
 
-
-        <com.google.android.flexbox.FlexboxLayout
-            android:id="@+id/station_nearby_ll"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="22dp"
-            android:layout_marginEnd="22dp"
-            android:layout_marginBottom="16dp"
-            app:alignItems="flex_start"
-            app:flexWrap="wrap"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/station_nearby_distance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:fontFamily="@font/roboto_thin"
-            android:text="149 m"
-            app:layout_constraintBottom_toTopOf="@id/station_nearby_ll"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/station_nearby_name" />
 
         <TextView
             android:id="@+id/station_nearby_name"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="4dp"
+            android:layout_weight="0"
             android:fontFamily="@font/roboto_bold"
             android:text="Drama"
             android:textColor="@android:color/black"
             android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintBottom_toTopOf="@id/station_nearby_ll"
-            app:layout_constraintEnd_toStartOf="@+id/station_nearby_favourite"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/station_nearby_favourite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="4dp"
+            android:layout_weight="0"
+            android:background="@android:color/transparent"
+            android:elevation="2dp"
+            android:src="@drawable/ic_favorite_black_24dp"
+            android:tint="@color/colorAccent" />
 
         <TextView
             android:id="@+id/station_nearby_center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="14dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="4dp"
             android:background="@drawable/stretched_circle"
             android:backgroundTint="@android:color/holo_orange_light"
             android:elevation="2dp"
@@ -71,27 +61,33 @@
             android:paddingBottom="2dp"
             android:text="@string/into_center"
             android:textColor="@android:color/white"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/station_nearby_name"
-            app:layout_constraintEnd_toStartOf="@+id/station_nearby_distance"
-            app:layout_constraintTop_toTopOf="@+id/station_nearby_name" />
+            android:textSize="12sp" />
 
-        <ImageView
-            android:id="@+id/station_nearby_favourite"
+        <TextView
+            android:id="@+id/station_nearby_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:background="@android:color/transparent"
-            android:elevation="2dp"
-            android:tint="@color/colorAccent"
-            app:layout_constraintBottom_toBottomOf="@+id/station_nearby_name"
-            app:layout_constraintEnd_toStartOf="@+id/station_nearby_center"
-            app:layout_constraintTop_toTopOf="@+id/station_nearby_name"
-            app:srcCompat="@drawable/ic_favorite_black_24dp" />
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/roboto_thin"
+            android:text="149 m"
+            android:textAlignment="textEnd" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/station_nearby_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="22dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="16dp"
+        app:alignItems="flex_start"
+        app:flexWrap="wrap" />
 
     <View
+        android:id="@+id/station_nearby_devider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/light_gray" />
