--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,11 +39,11 @@
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+        app:layout_behavior="@string/view_pager_bottom_sheet_behavior"
         app:behavior_hideable="false"
         app:behavior_peekHeight="250dp"
         android:translationZ="2dp"
-        android:elevation="4dp"/>
+        android:elevation="4dp" />
 
     <ImageButton
         android:id="@+id/search"
